Fixed intra-drawing gap on phones

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
   }
 
   .drawingFlex {
-    gap: .5rem;
+    gap: .5rem !important;
   }
 }
 
